# cppProjectTemplate

./: CMakeLists.txt  README.md
ProjA/test/: CMakeLists.txt
